--- a/packages/web-components/src/components/va-language-toggle/va-language-toggle.scss
+++ b/packages/web-components/src/components/va-language-toggle/va-language-toggle.scss
@@ -1,30 +1,38 @@
-:host div {
-  display: inline-block;
+:host {
+  font-size: 1rem;
 
-  div.inner-div {
-    border-right: 1px solid var(--vads-color-base-light);
-    padding-right: 8px;
-    margin-right: 8px;
-  }
-  a.is-current-lang {
-    font-weight: var(--font-weight-bold);
-    color: var(--vads-color-black);
-    text-decoration: none;
-    padding-top: 10px;
-    padding-bottom: 16px;
-    &:focus {
-      outline: 2px solid var(--vads-color-action-focus-on-light);
-      outline-offset: 2px;
+  div {
+    display: inline-block;
+
+    div.inner-div {
+      border-right: 1px solid var(--vads-color-base-light);
+      padding-right: 8px;
+      margin-right: 8px;
     }
-  }
-  va-link {
-    &::part(anchor) {
+
+    a.is-current-lang {
+      font-weight: var(--font-weight-bold);
+      color: var(--vads-color-black);
       text-decoration: none;
       padding-top: 10px;
       padding-bottom: 16px;
+
+      &:focus {
+        outline: 2px solid var(--vads-color-action-focus-on-light);
+        outline-offset: 2px;
+      }
     }
-    color: var(--vads-color-link);
-    padding-bottom: 2px;
-    border-bottom: 1px solid var(--vads-color-link);
+
+    va-link {
+      &::part(anchor) {
+        text-decoration: none;
+        padding-top: 10px;
+        padding-bottom: 16px;
+      }
+
+      color: var(--vads-color-link);
+      padding-bottom: 2px;
+      border-bottom: 1px solid var(--vads-color-link);
+    }
   }
 }
